--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,18 @@
               {
                 "sourceTag": "*",
                 "onlyDependOnLibsWithTags": ["*"]
+              },
+              {
+                "sourceTag": "app",
+                "onlyDependOnLibsWithTags": ["type:def", "type:app", "type:ui"]
+              },
+              {
+                "sourceTag": "type:def",
+                "onlyDependOnLibsWithTags": ["type:def"]
+              },
+              {
+                "sourceTag": "scope:fe",
+                "onlyDependOnLibsWithTags": ["scope:fe"]
               }
             ]
           }
@@ -23,8 +35,45 @@
     },
     {
       "files": ["*.ts", "*.tsx"],
-      "extends": ["plugin:@nx/typescript"],
-      "rules": {}
+      "extends": [
+        "plugin:@nx/typescript",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:@angular-eslint/recommended",
+        "plugin:@angular-eslint/template/process-inline-templates",
+        "plugin:prettier/recommended"
+      ],
+      "rules": {
+        "@typescript-eslint/no-unused-vars": [
+          "warn",
+          {
+            "argsIgnorePattern": "^_",
+            "varsIgnorePattern": "^_",
+            "caughtErrorsIgnorePattern": "^_"
+          }
+        ],
+        "@angular-eslint/directive-selector": [
+          "error",
+          {
+            "type": "attribute",
+            "prefix": "app",
+            "style": "camelCase"
+          }
+        ],
+        "@angular-eslint/component-selector": [
+          "error",
+          {
+            "type": "element",
+            "prefix": "app",
+            "style": "kebab-case"
+          }
+        ],
+        "@typescript-eslint/no-explicit-any":  "warn",
+        "semi": [
+          "error",
+          "never"
+        ]
+      }
     },
     {
       "files": ["*.js", "*.jsx"],
