--- a/apps/ViewFinder-e2e/project.json
+++ b/apps/ViewFinder-e2e/project.json
@@ -5,5 +5,6 @@
   "sourceRoot": "apps/ViewFinder-e2e/src",
   "implicitDependencies": ["ViewFinder"],
   "// targets": "to see all targets run: nx show project ViewFinder-e2e --web",
-  "targets": {}
+  "targets": {},
+  "tags": ["type:app", "scope:test"]
 }
