--- a/package.json
+++ b/package.json
@@ -2,35 +2,46 @@
   "name": "@dombidav/view-finder",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "setup": "npm i -g pnpm && pnpm i",
+    "lint": "nx run ViewFinder:lint",
+    "lint:fix": "nx run ViewFinder:lint --fix",
+    "serve": "nx run ViewFinder:serve:development",
+    "test": "nx run ViewFinder:test:ci",
+    "i18n": "nx run ViewFinder:extract-i18n",
+    "e2e": "nx run ViewFinder:e2e",
+    "e2e:ci": "nx run ViewFinder:e2e-ci",
+    "build": "nx run ViewFinder:build:development",
+    "build:prod": "nx run ViewFinder:build:production"
+  },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~17.3.0",
-    "@angular/common": "~17.3.0",
-    "@angular/compiler": "~17.3.0",
-    "@angular/core": "~17.3.0",
-    "@angular/forms": "~17.3.0",
-    "@angular/platform-browser": "~17.3.0",
-    "@angular/platform-browser-dynamic": "~17.3.0",
-    "@angular/platform-server": "~17.3.0",
-    "@angular/router": "~17.3.0",
-    "@angular/ssr": "~17.3.0",
+    "@angular/animations": "^17.3.9",
+    "@angular/common": "^17.3.9",
+    "@angular/compiler": "^17.3.9",
+    "@angular/core": "^17.3.9",
+    "@angular/forms": "^17.3.9",
+    "@angular/platform-browser": "^17.3.9",
+    "@angular/platform-browser-dynamic": "^17.3.9",
+    "@angular/platform-server": "^17.3.9",
+    "@angular/router": "^17.3.9",
+    "@angular/ssr": "^17.3.7",
     "@nx/angular": "19.0.4",
-    "express": "~4.18.2",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "express": "^4.18.3",
+    "rxjs": "^7.8.1",
+    "tslib": "^2.6.2",
+    "zone.js": "^0.14.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~17.3.0",
-    "@angular-devkit/core": "~17.3.0",
-    "@angular-devkit/schematics": "~17.3.0",
-    "@angular-eslint/eslint-plugin": "~17.3.0",
-    "@angular-eslint/eslint-plugin-template": "~17.3.0",
-    "@angular-eslint/template-parser": "~17.3.0",
-    "@angular/cli": "~17.3.0",
-    "@angular/compiler-cli": "~17.3.0",
-    "@angular/language-service": "~17.3.0",
+    "@angular-devkit/build-angular": "^17.3.7",
+    "@angular-devkit/core": "^17.3.7",
+    "@angular-devkit/schematics": "^17.3.7",
+    "@angular-eslint/eslint-plugin": "^17.3.0",
+    "@angular-eslint/eslint-plugin-template": "^17.3.0",
+    "@angular-eslint/template-parser": "^17.3.0",
+    "@angular/cli": "^17.3.7",
+    "@angular/compiler-cli": "^17.3.9",
+    "@angular/language-service": "^17.3.9",
     "@nx/devkit": "19.0.4",
     "@nx/eslint": "19.0.4",
     "@nx/eslint-plugin": "19.0.4",
@@ -38,26 +49,32 @@
     "@nx/js": "19.0.4",
     "@nx/playwright": "19.0.4",
     "@nx/workspace": "19.0.4",
-    "@playwright/test": "^1.36.0",
-    "@schematics/angular": "~17.3.0",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
-    "@types/express": "4.17.14",
-    "@types/jest": "^29.4.0",
-    "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^7.3.0",
-    "@typescript-eslint/parser": "^7.3.0",
-    "eslint": "~8.57.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-playwright": "^0.15.3",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "jest-preset-angular": "~14.0.3",
+    "@playwright/test": "^1.44.0",
+    "@schematics/angular": "^17.3.7",
+    "@swc-node/register": "^1.8.0",
+    "@swc/core": "^1.4.17",
+    "@swc/helpers": "^0.5.11",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-playwright": "^1.6.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "^14.0.4",
+    "jsonc-eslint-parser": "^2.1.0",
+    "ng-packagr": "~17.3.0",
     "nx": "19.0.4",
-    "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
-    "typescript": "~5.4.2"
+    "postcss": "^8.4.5",
+    "postcss-url": "~10.1.3",
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
